feat: receipt/record query failover to other nodes
Signed-off-by: Mustafa Uzun <mustafa.uzun@limechain.tech>