@@ -3,6 +3,7 @@ package com.hedera.hashgraph.sdk;
 
 import com.google.common.base.MoreObjects;
 import java.time.Duration;
+import java.util.ArrayList;
 import java.util.Collections;
 import java.util.List;
 import java.util.concurrent.CompletableFuture;
@@ -134,7 +135,7 @@ public final class TransactionResponse {
         while (attempts < MAX_RETRY_ATTEMPTS) {
             try {
                 // Attempt to execute the receipt query
-                return getReceiptQuery().execute(client, timeout).validateStatus(validateStatus);
+                return getReceiptQuery(client).execute(client, timeout).validateStatus(validateStatus);
             } catch (ReceiptStatusException e) {
                 // Check if the exception status indicates throttling or inner transaction throttling
                 if (e.receipt.status == Status.THROTTLED_AT_CONSENSUS) {
@@ -188,10 +189,15 @@ public final class TransactionResponse {
      *
      * @return {@link com.hedera.hashgraph.sdk.TransactionReceiptQuery}
      */
-    public TransactionReceiptQuery getReceiptQuery() {
-        return new TransactionReceiptQuery()
-                .setTransactionId(transactionId)
-                .setNodeAccountIds(Collections.singletonList(nodeId));
+    public TransactionReceiptQuery getReceiptQuery(Client client) {
+        List<AccountId> nodeIds = new ArrayList<>(List.of(nodeId));
+        if (client != null && client.isAllowReceiptNodeFailover()) {
+            nodeIds.addAll(client.getNetwork().values().stream()
+                    .filter(id -> !id.equals(nodeId))
+                    .toList());
+        }
+
+        return new TransactionReceiptQuery().setTransactionId(transactionId).setNodeAccountIds(nodeIds);
     }
 
     /**
@@ -212,7 +218,7 @@ public final class TransactionResponse {
      * @return the transaction receipt
      */
     public CompletableFuture<TransactionReceipt> getReceiptAsync(Client client, Duration timeout) {
-        return getReceiptQuery().executeAsync(client, timeout).thenCompose(receipt -> {
+        return getReceiptQuery(client).executeAsync(client, timeout).thenCompose(receipt -> {
             try {
                 return CompletableFuture.completedFuture(receipt.validateStatus(validateStatus));
             } catch (ReceiptStatusException e) {
